[tool.poetry]
name = "helpmy_bot(docker)"
version = "0.1.0"
description = "HW"
authors = ["SaifuliAnna <anetkabest@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
