[tool.poetry]
name = "helpmy_bot"
version = "0.1.0"
description = "home work project"
authors = ["SaifuliAnna"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "my_module:get_menu"
